middleware + swagger features
